[package]
name = "jitter"
version = "0.1.0"
authors = ["Wojciech Kudla <Wojciech.Kudla@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[term]
verbose = false        # whether cargo provides verbose output
color = 'always'         # whether cargo colorizes output
progress.when = 'always' # whether cargo shows progress bar
progress.width = 200    # width of progress bar

[dependencies]
clap = "3.0.0-beta.2"
nix = "0.20.0"