[package]
name = "jitter"
version = "1.0.1"
authors = ["Wojciech Kudla <Wojciech.Kudla@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3 


[term]
verbose = false        # whether cargo provides verbose output
color = 'always'         # whether cargo colorizes output
progress.when = 'always' # whether cargo shows progress bar
progress.width = 200    # width of progress bar

[dependencies]
clap = "4.0.29"
nix = "0.26.1"
crossbeam = "0.8.1"
log = "0.4.17"
env_logger = "0.10.0"
gethostname = "0.3.0"
isahc = "1.7.2"